# sugarrush

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.example.toml  dist-workspace.toml
.github/workflows/: aur.yml  ci.yml  publish-crate.yml  release-notes.yml  release.yml
assets/: demo.tape
packaging/aur/: PKGBUILD.in
src/: agp.rs  alert.rs  app.rs  bigfont.rs  config.rs  demo.rs  main.rs  nightscout.rs  predict.rs  sound.rs  stats.rs  theme.rs  ui.rs  units.rs  view.rs  waybar.rs  wizard.rs
waybar/: config.jsonc  hyprland.conf  style.css  sugarrush-menu.xml
