[package]
name = "sugarrush"
version = "2026.7.2"
edition = "2021"
rust-version = "1.82"
description = "A terminal UI for viewing Nightscout CGM (blood glucose sensor) data"
license = "MIT"
repository = "https://github.com/ronaldlokers/sugarrush"
homepage = "https://github.com/ronaldlokers/sugarrush"
readme = "README.md"
keywords = ["nightscout", "cgm", "diabetes", "glucose", "tui"]
categories = ["command-line-utilities", "visualization"]
# Keep the published crate lean — dev/CI/demo assets aren't needed to build.
exclude = ["assets/", "waybar/", "packaging/", ".github/", "*.tape", "settings-preview.*"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
notify-rust = "4"

[profile.release]
strip = true
lto = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
